Fixed card opening on IE11

--- a/css/layout-css/agenda-style.upload.css
+++ b/css/layout-css/agenda-style.upload.css
@@ -274,6 +274,7 @@
 
 .agenda-list-item.open {
   border-radius: 0;
+  overflow: auto;
 }
 
 .agenda-list-item-content {
