--- a/css/layout-css/news-feed-style.upload.css
+++ b/css/layout-css/news-feed-style.upload.css
@@ -428,6 +428,7 @@
 
 .news-feed-list-item.open {
   border-radius: 0;
+  overflow: auto;
 }
 
 .news-feed-item-content {
